# lerobot-matchmaker

./: .firebaserc  CLAUDE.md  README.md  firebase.json  pyproject.toml
.github/workflows/: ci.yml
firebase_function/: main.py  requirements.txt
src/lerobot_matchmaker/: __init__.py  __main__.py  room.py  server.py
tests/: test_firebase.py  test_room.py  test_server.py
